--- a/KAN4Granger/KANvsMLP_TS_demo.ipynb
+++ b/KAN4Granger/KANvsMLP_TS_demo.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "from synthetic import simulate_var\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
-    "from models.ckan import cKAN\n",
+    "from models.kan import KAN\n",
     "from models.model_helper import activation_helper\n",
     "from tqdm import tqdm"
    ]
